Make the repository usable from home folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,51 @@
 /*.zip
 /Iosevka
+
 /.emacs.d/auto-save-list
 /.emacs.d/eln-cache
 /.emacs.d/elpa
 /.emacs.d/smex-items
 /.emacs.d/ido.last
+
+/.config/.gsd-keyboard.settings-ported
+/.config/GNOME-xdg-terminals.list
+/.config/dconf/
+/.config/evolution/
+/.config/gnome-initial-setup-done
+/.config/gtk-3.0/
+/.config/ibus/
+/.config/pulse/
+/.config/user-dirs.dirs
+/.config/user-dirs.locale
+/.config/xdg-terminals.list
+
+/.lesshst
+/.local/
+/.saves/
+
+/.git-credentials
+/.gitconfig
+
+/.face
+/.face.icon
+
+/.bash_*
+/.cache
+
+/Desktop
+/Documents
+/Downloads
+/Music
+/Pictures
+/Public
+/Templates
+/Videos
+
+/src
+/kruchy.net
+
+/.wget-hsts
+/.X*
+/.x*
+
+/.gnupg
